--- a/prisma-users/package.json
+++ b/prisma-users/package.json
@@ -5,19 +5,19 @@
   "author": "André Sousa",
   "license": "MIT",
   "scripts": {
-    "dev": "tsnd --respawn --transpile-only --exit-child src/app.ts"
+    "dev": "tsnd --respawn --transpile-only --exit-child src/app.ts",
+    "build": "tsc -p tsconfig.json"
   },
   "dependencies": {
+    "@fastify/jwt": "^7.2.0",
     "@prisma/client": "^5.1.1",
     "fastify": "^4.21.0",
-    "fastify-jwt": "^4.2.0",
     "fastify-swagger": "^5.2.0",
     "fastify-zod": "^1.3.2",
     "zod": "^3.21.4",
     "zod-to-json-schema": "^3.21.4"
   },
   "devDependencies": {
-    "@types/fastify-jwt": "^0.8.1",
     "@types/node": "^20.4.8",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.1.6"
